event sessions and event form refactor
